all images to webp and pages linked and styled almost done with website

--- a/html/main.html
+++ b/html/main.html
@@ -27,7 +27,7 @@
   <header>
 
     <article class="logo">
-      <img src="/img/logo7.png" alt="">
+      <img src="/img/logo7.webp" alt="">
     </article>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -63,11 +63,11 @@
 
     <li><a href="/html/main.html">Home</a></li>
     <li><a href="/about-us.html">About-us</a></li>
-    <li><a href="#">Information</a></li>
+    <li><a href="/info.html">Information</a></li>
     <li><a href="/productpage1.html">Products page</a></li>
     <li><a href="/contact.html">Contact</a></li>
     <li><a href="/developer.html">Developers</a></li>
-    <li><a href="/location.html">Location</a></li>
+    <li><a href="#">Location</a></li>
     <li><a href="/login.html">Log-in</a></li>
 
 
@@ -77,7 +77,7 @@
   <nav>
     <ul class="nav-menu">
       <li class="norm li-1"><a href="/html/main.html">Home</a></li>
-      <li class="norm li-1"><a href="#">Prices</a></li>
+      <li class="norm li-1"><a href="/productpage1.html">Prices</a></li>
       <li class="norm li-1"><a href="#">Deals</a></li>
       <li class="norm li-1"><a href="/dutch.html">Dutch</a></li>
       <li class="norm li-1"><a href="/goldpage.html">Gold</a></li>
@@ -117,7 +117,7 @@
     </article>
 
     <section class="hero-3">
-      <img src="/img/product1nl.png" alt="">
+      <img src="/img/product1nl.webp" alt="">
     </section>
 
 
@@ -151,14 +151,15 @@
       </a>
 
     </article>
-    <img class="heading-img" src="/img/product2nl.png" alt="">
+    <img class="heading-img" src="/img/product2nl.webp" alt="">
   </article>
 
   <ul class="parts">
     <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/banknotes1.png" alt="figuurtje van bucciarati"></li>
+      <li class="part" data-category="Banknotes"><img src="/img/banknotes1.webp" alt="figuurtje van bucciarati"></li>
       <h2>100 Gulden "Snip" 1977 ZFr+</h2>
       <h1>€39,99</h1>
+      <a href="/productspage1.html"><h2 class="h2--details">details</h2></a>
       <a href="/banknotes.html">
         <p class="part--p">op vooraad > </p>
       </a>
@@ -166,28 +167,31 @@
     </section>
 
     <section class="part--section">
-      <li class="part" data-category="Dutch"><img src="/img/product1nl.png" alt="figuurtje van de stand Crazy Diamond">
+      <li class="part" data-category="Dutch"><img src="/img/product1nl.webp" alt="figuurtje van de stand Crazy Diamond">
       </li>
       <h2>Munt 2 euro Nederland 2001 BEATRIX KONINGIN der NEDERLANDEN</h2>
       <h1>€349,99</h1>
+      <a href="/productspage.html"><h2 class="h2--details">details</h2></a>
       <a href="/dutch.html">
         <p class="part--p">op vooraad > </p>
       </a>
     </section>
 
     <section class="part--section">
-      <li class="part" data-category="Gold"><img src="/img/gold1.png" alt="figuurtje van DIO"></li>
+      <li class="part" data-category="Gold"><img src="/img/gold1.webp" alt="figuurtje van DIO"></li>
       <h2>2 Euro 2000, Juan Carlos I (2000-2009) - Spain - Coin - 7688</h2>
       <h1>€224,99</h1>
-      <a href="/gold.html">
+      <a href=""><h2 class="h2--details">details</h2></a>
+      <a href="/goldpage.html">
         <p class="part--p">op vooraad > </p>
       </a>
     </section>
 
     <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/banknotes3.png" alt="figuurtje van Abbaccio"></li>
+      <li class="part" data-category="Banknotes"><img src="/img/banknotes3.webp" alt="figuurtje van Abbaccio"></li>
       <h2>Banknote China 10 Yen - Dragon - ND (1939) - F to VF - P.M20</h2>
-      <h1>€100.000.000.000</h1>
+      <h1>€2500</h1>
+      <a href="/productspage1.html"><h2 class="h2--details">details</h2></a>
       <a href="/banknotes.html">
         <p class="part--p">op vooraad > </p>
       </a>
@@ -195,10 +199,11 @@
     </section>
 
     <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/product3nl.png" alt="figuurtje
+      <li class="part" data-category="Banknotes"><img src="/img/product3nl.webp" alt="figuurtje
         van Abbaccio"></li>
       <h2>Munt 0,05 euro Nederland 1999 BEATRIX KONINGIN der NEDERLANDEN</h2>
-      <h1>Test</h1>
+      <h1>€149,99</h1>
+      <a href="/productspage.html"><h2 class="h2--details">details</h2></a>
       <a href="/dutch.html">
         <p class="part--p">op vooraad > </p>
       </a>
@@ -206,10 +211,11 @@
     </section>
 
     <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/banknotes2.png" alt="figuurtje
+      <li class="part" data-category="Banknotes"><img src="/img/banknotes2.webp" alt="figuurtje
         van Abbaccio"></li>
       <h2> Netherlands 1000 Gulden Banknote 1972, Aunc</h2>
       <h1>Test</h1>
+      <a href="/productspage1.html"><h2 class="h2--details">details</h2></a>
       <a href="/banknotes.html">
         <p class="part--p">op vooraad > </p>
       </a>
@@ -260,7 +266,7 @@
           <a href="/dutch.html"><button type="button">Buy now!</button></a>
         </section>
       </div>
-      <img src="/img/product1nl.png" alt="" />
+      <img src="/img/product1nl.webp" alt="" />
     </div>
   </section>
 
@@ -275,7 +281,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/review1.jpg" alt="">
+        <img src="/img/review1.webp" alt="">
         <p>1. Greedy's is hands down the best store I've ever been to! The selection is amazing, and they always have
           the latest trends in stock. The staff is friendly and helpful, making shopping a breeze. I highly recommend
           Greedy's for all your fashion needs!.</p>
@@ -290,7 +296,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/review2.jpg" alt="">
+        <img src="/img/review2.webp" alt="">
         <p>2. I had a fantastic experience shopping at Greedy's. The store is well-organized, and it's easy to find what
           you're looking for. The quality of their products is top-notch, and their prices are reasonable. Whether
           you're shopping for clothing, accessories, or home decor, Greedy's has it all!</p>
@@ -303,7 +309,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/review3.jpg" alt="">
+        <img src="/img/review3.webp" alt="">
         <p>3.Greedy's is a hidden gem! I stumbled upon this store while exploring the city, and I'm so glad I did. The
           store has a unique selection of items that you won't find anywhere else. It's a great place to find gifts for
           friends and family. I'll definitely be back!</p>
@@ -316,7 +322,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/review4.png" alt="">
+        <img src="/img/review4.webp" alt="">
         <p>4. I recently visited Greedy's for the first time, and I was blown away by the level of customer service. The
           staff went above and beyond to assist me in finding the perfect outfit for a special occasion. They were
           patient, attentive, and genuinely cared about my satisfaction. Greedy's has won me over as a loyal customer!
@@ -330,7 +336,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/review5.gif" alt="">
+        <img src="/img/review5.webp" alt="">
         <p>5. Me as a lightskin Greedy's is a fashion lover's paradise! The store is beautifully designed, and it feels
           like stepping into a high-end boutique. The quality of their Coins and banknotes is exceptional, and the
           styles are always on-trend. If you want to elevate your collection, Greedy's is the place to go.</p>
@@ -345,7 +351,7 @@
           &#9733;
           &#9733;
         </section>
-        <img src="/img/palah" alt="">
+        <img src="/img/palah.webp" alt="">
         <p>6. Shopping at Greedy's is always a delight. The store has a trendy and modern atmosphere that makes browsing
           a pleasure. Their sales and promotions are fantastic, offering great deals on high-quality items. I've been a
           regular customer for years, and I can't recommend Greedy's enough for anyone who loves fashion and a great
@@ -360,7 +366,7 @@
   <footer>
     <article class="row">
       <section class="col">
-        <img src="/img/logo7.png" alt="" class="logo">
+        <img src="/img/logo7.webp" alt="" class="logo">
         <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
       </section>
 
@@ -379,7 +385,7 @@
         <ul class="page-footer">
           <li><a href="/html/main.html">Home</a></li>
           <li><a href="/about-us.html">About-us</a></li>
-          <li><a href="#">Information</a></li>
+          <li><a href="/info.html">Information</a></li>
           <li><a href="/productpage1.html">Products page</a></li>
           <li><a href="/developer.html">Developers</a></li>
           <li><a href="/contact.html">contact</a></li>
