--- a/productpage1.html
+++ b/productpage1.html
@@ -23,7 +23,7 @@
   <header>
 
     <article class="logo">
-      <img src="/img/logo7.png" alt="">
+      <img src="/img/logo7.webp" alt="">
     </article>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -56,13 +56,13 @@
   <ul class="navlist">
 
     <li><a href="/html/main.html">Home</a></li>
-    <li><a href="/about-us.html">About-us</a></li>
+    <li><a href="about-us.html">About-us</a></li>
     <li><a href="#">Information</a></li>
-    <li><a href="/productpage1.html">Products page</a></li>
-    <li><a href="/developer.html">Developers</a></li>
-    <li><a href="/contact.html">contact</a></li>
-    <li><a href="/location.html">Location</a></li>
-    <li><a href="/login.html">Log-in</a></li>
+    <li><a href="productpage1.html">Products page</a></li>
+    <li><a href="developer.html">Developers</a></li>
+    <li><a href="contact.html">contact</a></li>
+    <li><a href="location.html">Location</a></li>
+    <li><a href="login.html">Log-in</a></li>
 
 
 
@@ -70,24 +70,24 @@
 
   <nav>
     <ul class="nav-menu">
-      <li class="norm li-1"><a href="/html/main.html">Home</a></li>
-      <li class="norm li-1"><a href="/about-us.html">About us</a></li>
-      <li class="norm li-1"><a href="/info.html">Information</a></li>
-      <li class="norm li-1"><a href="#">Prices</a></li>
+      <li class="norm li-1"><a href="html/main.html">Home</a></li>
+      <li class="norm li-1"><a href="about-us.html">About us</a></li>
+      <li class="norm li-1"><a href="info.html">Information</a></li>
+      <li class="norm li-1"><a href="productpage1.html">Prices</a></li>
       <li class="norm li-1"><a href="#">Deals</a></li>
-      <li class="norm li-1"><a href="/developer.html">Developers</a></li>
-      <li class="norm li-1"><a href="/contact.html">contact</a></li>
-      <li class="norm li-1"><a href="/login.html">Log-in</a></li>
+      <li class="norm li-1"><a href="developer.html">Developers</a></li>
+      <li class="norm li-1"><a href="contact.html">contact</a></li>
+      <li class="norm li-1"><a href="login.html">Log-in</a></li>
       <li class="dropdown norm li-1" id="click-slide">
         <a href="#" class="dropdown-toggle" id="drop" data-toggle="dropdown" onclick="toggleSlider();" role="button"
           aria-expanded="false">Products &nbsp; &#9660;</a>
 
         <ul class="dropdown-menu" id="dropdown-menu-r" role="menu">
-          <li><a href="/productpage1.html">All Products</a></li>
-          <li><a href="/dutch.html">Dutch</a></li>
-          <li><a href="/gold.html">Gold</a></li>
-          <li><a href="/silver.html">Silver</a></li>
-          <li><a href="/banknotes.html">Banknotes</a></li>
+          <li><a href="productpage1.html">All Products</a></li>
+          <li><a href="dutch.html">Dutch</a></li>
+          <li><a href="goldpage.html">Gold</a></li>
+          <li><a href="silverpage.html">Silver</a></li>
+          <li><a href="banknotes.html">Banknotes</a></li>
         </ul>
       </li>
     </ul>
@@ -159,7 +159,7 @@
     <ul class="parts">
 
       <section class="part--section">
-        <li class="part" data-category="part--1"><img src="img/product1nl.png"
+        <li class="part" data-category="part--1"><img src="img/product1nl.webp"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 2 euro Nederland 2001 BEATRIX</p>
         <a href="dutch.html">
@@ -179,7 +179,7 @@
 
 
       <section class="part--section">
-        <li class="part" data-category="part--4"><img src="img/banknotes1.png"
+        <li class="part" data-category="part--4"><img src="img/banknotes1.webp"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>100 Gulden "Snip" 1977 ZFr+</p>
         <a href="banknotes.html">
@@ -192,9 +192,9 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver1.png" alt="figuurtje van DIO"></li>
+        <li class="part" data-category="part--3"><img src="img/silver1.webp" alt="figuurtje van DIO"></li>
         <p>2022 St. Helena 1 oz Silver Queens Coin</p>
-        <a href="silver.html">
+        <a href="silverpage.html">
           <h2>Op vooraad </h2>
         </a>
         <li value="34,99" class="price-product">€34,99</li>
@@ -205,7 +205,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--1"><img src="img/product2nl.png"
+        <li class="part" data-category="part--1"><img src="img/product2nl.webp"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 1 euro Nederland 2001 BEATRIX</p>
         <a href="dutch.html">
@@ -222,9 +222,9 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold1.png" alt="figuurtje van Esidisi"></li>
+        <li class="part" data-category="part--2"><img src="img/gold1.webp" alt="figuurtje van Esidisi"></li>
         <p>2 Euro 2000, Juan Carlos I spain</p>
-        <a href="gold.html">
+        <a href="goldpage.html">
           <h2>Op vooraad > </h2>
         </a>
         <li value="224,99" class="price-product">€224,99</li>
@@ -235,7 +235,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--4"><img src="img/banknotes2.png"
+        <li class="part" data-category="part--4"><img src="img/banknotes2.webp"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>Netherlands 1000 Gulden Banknote 1972</p>
         <a href="banknotes.html">
@@ -248,7 +248,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--1"><img src="img/product3nl.png"
+        <li class="part" data-category="part--1"><img src="img/product3nl.webp"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Koningin Beatrix 5 EuroCent</p>
         <a href="dutch.html">
@@ -261,10 +261,10 @@
 
       </section>
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold2.png" alt="figuurtje van de stand Joseph joestar">
+        <li class="part" data-category="part--2"><img src="img/gold2.webp" alt="figuurtje van de stand Joseph joestar">
         </li>
         <p>50 cent euromunt Frankrijk 1999</p>
-        <a href="gold.html">
+        <a href="goldpage.html">
           <h2>Op vooraad > </h2>
         </a>
         <li value="99,99" class="price-product">€99,99</li>
@@ -275,10 +275,10 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver2.png" alt="figuurtje van de stand Jotaro Kujo">
+        <li class="part" data-category="part--3"><img src="img/silver2.webp" alt="figuurtje van de stand Jotaro Kujo">
         </li>
         <p>Australia Silver Coin 2017 Koala Elizabeth II</p>
-        <a href="silver.html">
+        <a href="silverpage.html">
           <h2>Op vooraad > </h2>
         </a>
         <li value="34,99" class="price-product">€34,99</li>
@@ -289,7 +289,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--4"><img src="img/banknotes3.png"
+        <li class="part" data-category="part--4"><img src="img/banknotes3.webp"
             alt="figuurtje van de stand Killer Queen"></li>
         <p>Banknote China 10 Yen - Dragon - ND 1939</p>
         <a href="banknotes.html">
@@ -303,10 +303,10 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold3.png" alt="figuurtje van de stand Joseph joestar">
+        <li class="part" data-category="part--2"><img src="img/gold3.webp" alt="figuurtje van de stand Joseph joestar">
         </li>
         <p>Duitsland 2 Euro F = Stuttgart</p>
-        <a href="gold.html">
+        <a href="goldpage.html">
           <h2>Op vooraad > </h2>
         </a>
         <li value="239,99" class="price-product">€239,99</li>
@@ -318,10 +318,10 @@
 
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver3.png"
+        <li class="part" data-category="part--3"><img src="img/silver3.webp"
             alt="figuurtje van de stand The World - Limited Edition"></li>
         <p>1 troy ounce silver coin Maple Leaf</p>
-        <a href="silver.html">
+        <a href="silverpage.html">
           <h2>Op vooraad > </h2>
         </a>
         <li value="44,99" class="price-product">€44,99</li>
@@ -339,7 +339,7 @@
   <footer>
     <article class="row">
       <section class="col">
-        <img src="/img/logo7.png" alt="" class="logo">
+        <img src="/img/logo7.webp" alt="" class="logo">
         <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go
           to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
       </section>
@@ -359,11 +359,11 @@
         <ul>
           <li><a href="/html/main.html">Home</a></li>
           <li><a href="/about-us.html">About-us</a></li>
-          <li><a href="#">Information</a></li>
+          <li><a href="info.html">Information</a></li>
           <li><a href="/productpage1.html">Products page</a></li>
           <li><a href="/developer.html">Developers</a></li>
           <li><a href="/contact.html">contact</a></li>
-          <li><a href="/location.html">Location</a></li>
+          <li><a href="#">Location</a></li>
           <li><a href="/login.html">Log-in</a></li>
         </ul>
       </section>
