--- a/productspage1.html
+++ b/productspage1.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Greedy's - Product Page</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="productspage.css" rel="stylesheet">
+  <link href="productspage1.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
 </head>
 
@@ -23,7 +23,7 @@
   <header>
 
     <article class="logo">
-      <img src="/img/logo7.png" alt="">
+      <img src="/img/logo7.webp" alt="">
     </article>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -106,9 +106,9 @@
 
     <!-- Left Column  -->
     <section class="left-column">
-      <img data-image="jett" class="active" src="/img/product1nl.webp" alt="">
-      <img data-image="black" src="/img/nlbalalal.webp" alt="">
-      <img data-image="blue" src="/img/productnlpage`.webp" alt="">
+      <img data-image="jett" class="active" src="/img/banknotes3.webp" alt="">
+      <img data-image="black" src="/img/banknotes4.webp" alt="">
+      <img data-image="blue" src="/img/banknotes5.webp" alt="">
       
     </section>
 
@@ -118,12 +118,12 @@
 
       <!-- Product Description -->
       <article class="product-description">
-        <span>Coins </span>
-        <h1> Dutch coins</h1>
-        <p>The older coins from the years!</p>
+        <span>Banknotes </span>
+        <h1>BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</h1>
+        <p>The older Banknotes from the years!</p>
       </article>
       <p class="details--p">Details:</p>
-      <p class="details--p1">De munt is geslagen in december vorig jaar, het jaar waarin Beatrix aftrad. Het gaat om een munt uit een beperkte oplage; er zijn er slechts 38 van geslagen tijdens een speciale bijeenkomst. Daarnaast is de 2-euromunt niet voorzien van een randschrift. Normaal gesproken staat de spreuk 'God zij met ons' op de munt.</p>
+      <p class="details--p1">Banknote, 10 yen, military issue, Line B inscription, Plate 4, Japanese puppet bank in occupied China, paper, China / Japan, [1939]</p>
 
       <!-- Product Configuration -->
       <article class="product-configuration">
@@ -131,7 +131,8 @@
         <!-- Product Color -->
         <section class="product-color">
           <span>Photo</span>
-          <p>Click to change item</p>
+         <p>Click to change item</p>
+
           <div class="color-choose">
             <div>
               <input data-image="jett" type="radio" id="jett" name="color" value="jett">
@@ -152,7 +153,7 @@
 
         <!-- Product Pricing -->
         <article class="product-price">
-          <span>€399,99</span>
+          <span>€2500</span>
           <a href="#" class="cart-btn">Add to cart</a>
         </article>
     </section>
@@ -223,7 +224,7 @@
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-  <script src="productspage.js" defer></script>
+  <script src="productspage1.js" defer></script>
 
 </body>
 
