--- a/banknotes.html
+++ b/banknotes.html
@@ -21,25 +21,25 @@
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
-                <img src="/img/banknotes1.png" alt="champagne" class="checkOut__image">
+                <img src="/img/banknotes1.webp" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">100 GULDEN "SNIP" 1977 ZFR+</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
                 <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/banknotes2.png" alt="champagne" class="checkOut__image">
+                <img src="/img/banknotes2.webp" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">NETHERLANDS 1000 GULDEN BANKNOTE 1972</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
                 <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/banknotes3.png" alt="champagne" class="checkOut__image">
+                <img src="/img/banknotes3.webp" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
                 <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/silver3.png" alt="champagne" class="checkOut__image">
+                <img src="/img/silver3.webp" alt="champagne" class="checkOut__image">
                 <p class="checkOut__title">1 TROY OUNCE SILVER COIN MAPLE LEAF</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
                 <p class="total--price4" id="total--price4"></p>
@@ -58,7 +58,7 @@
     <main>
         <ul class="games">
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/banknotes1.png" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="/img/banknotes1.webp" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€69,99</h2>
                     <h3 class="games__h3">100 GULDEN "SNIP" 1977 ZFR+</h3>
@@ -87,7 +87,7 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/banknotes2.png" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="/img/banknotes2.webp" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€174,99</h2>
                     <h3 class="games__h3">NETHERLANDS 1000 GULDEN BANKNOTE 197</h3>
@@ -116,7 +116,7 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/banknotes3.png" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="/img/banknotes3.webp" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€2500</h2>
                     <h3 class="games__h3">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</h3>
@@ -139,13 +139,13 @@
                       </div>
                     <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
                     <button data-product="champagne3" class="games__button">Add to Cart</button>
-                    <a href=""><button class="game__button">Details</button></a>
+                    <a href="productspage1.html"><button class="game__button">Details</button></a>
                     <a href="/productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/silver3.png" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="/img/silver3.webp" alt="champagne" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€44,99</h2>
                     <h3 class="games__h3">1 TROY OUNCE SILVER COIN MAPLE LEAF</h3>
