--- a/html/main.html
+++ b/html/main.html
@@ -32,20 +32,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-    <div class="wrapper">
-      <div class="label">Submit your search</div>
-      <div class="searchBar">
-        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Hello men!!!!!!!!!!!!!!!!!!!"
-          value="" />
-        <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
-          <svg style="width:40px;height:30px" viewBox="9 2 20 24">
-            <path fill="#39b54a"
-              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-          </svg>
-        </button>
-      </div>
-    </div>
-
+    
 
     <article class="cart">
       <a href="/productpage1.html"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -56,20 +43,17 @@
 
 
 
-    <section class="bx bx-menu" id="menu-icon"></section>
+   
   </header>
 
   <ul class="navlist">
 
     <li><a href="/html/main.html">Home</a></li>
-    <li><a href="/about-us.html">About-us</a></li>
+    <li><a href="/about-us.html">Aboutus</a></li>
     <li><a href="/info.html">Information</a></li>
-    <li><a href="/productpage1.html">Products page</a></li>
     <li><a href="/contact.html">Contact</a></li>
     <li><a href="/developer.html">Developers</a></li>
-    <li><a href="#">Location</a></li>
-    <li><a href="/login.html">Log-in</a></li>
-
+    
 
 
   </ul>
@@ -77,23 +61,20 @@
   <nav>
     <ul class="nav-menu">
       <li class="norm li-1"><a href="/html/main.html">Home</a></li>
+      <li class="norm li-1"><a href="/about-us.html">About us</a></li>
+      <li class="norm li-1"><a href="/info.html">Information</a></li>
       <li class="norm li-1"><a href="/productpage1.html">Prices</a></li>
-      <li class="norm li-1"><a href="#">Deals</a></li>
-      <li class="norm li-1"><a href="/dutch.html">Dutch</a></li>
-      <li class="norm li-1"><a href="/goldpage.html">Gold</a></li>
-      <li class="norm li-1"><a href="/silverpage.html">Silver</a></li>
-      <li class="norm li-1"><a href="/banknotes.html">Banknotes</a></li>
-      <li class="norm li-1"><a href="#">Coming soon!</a></li>
+      <li class="norm li-1"><a href="/contact.html">contact</a></li>
       <li class="dropdown norm li-1" id="click-slide">
         <a href="#" class="dropdown-toggle" id="drop" data-toggle="dropdown" onclick="toggleSlider();" role="button"
           aria-expanded="false">Products &nbsp; &#9660;</a>
 
         <ul class="dropdown-menu" id="dropdown-menu-r" role="menu">
-          <li><a href="/productpage1.html">All Products</a></li>
-          <li><a href="/dutch.html">Dutch</a></li>
-          <li><a href="/goldpage.html">Gold</a></li>
-          <li><a href="/silverpage.html">Silver</a></li>
-          <li><a href="/banknotes.html">Banknotes</a></li>
+          <li><a href="productpage1.html">All Products</a></li>
+          <li><a href="dutch.html">Dutch</a></li>
+          <li><a href="goldpage.html">Gold</a></li>
+          <li><a href="silverpage.html">Silver</a></li>
+          <li><a href="banknotes.html">Banknotes</a></li>
         </ul>
       </li>
     </ul>
@@ -187,37 +168,37 @@
       </a>
     </section>
 
-    <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/banknotes3.webp" alt="figuurtje van Abbaccio"></li>
+    <section class="part--section1">
+      <li class="part1" data-category="Banknotes"><img src="/img/banknotes3.webp" alt="figuurtje van Abbaccio"></li>
       <h2>Banknote China 10 Yen - Dragon - ND (1939) - F to VF - P.M20</h2>
       <h1>€2500</h1>
-      <a href="/productspage1.html"><h2 class="h2--details">details</h2></a>
+      <a href="/productspage1.html"><h2 class="h2--details1">details</h2></a>
       <a href="/banknotes.html">
-        <p class="part--p">op vooraad > </p>
+        <p class="part--p1">op vooraad > </p>
       </a>
 
     </section>
 
-    <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/product3nl.webp" alt="figuurtje
+    <section class="part--section1">
+      <li class="part1" data-category="Banknotes"><img src="/img/product3nl.webp" alt="figuurtje
         van Abbaccio"></li>
       <h2>Munt 0,05 euro Nederland 1999 BEATRIX KONINGIN der NEDERLANDEN</h2>
       <h1>€149,99</h1>
-      <a href="/productspage.html"><h2 class="h2--details">details</h2></a>
+      <a href="/productspage.html"><h2 class="h2--details1">details</h2></a>
       <a href="/dutch.html">
-        <p class="part--p">op vooraad > </p>
+        <p class="part--p1">op vooraad > </p>
       </a>
 
     </section>
 
-    <section class="part--section">
-      <li class="part" data-category="Banknotes"><img src="/img/banknotes2.webp" alt="figuurtje
+    <section class="part--section1">
+      <li class="part1" data-category="Banknotes"><img src="/img/banknotes2.webp" alt="figuurtje
         van Abbaccio"></li>
       <h2> Netherlands 1000 Gulden Banknote 1972, Aunc</h2>
       <h1>Test</h1>
-      <a href="/productspage1.html"><h2 class="h2--details">details</h2></a>
+      <a href="/productspage1.html"><h2 class="h2--details1">details</h2></a>
       <a href="/banknotes.html">
-        <p class="part--p">op vooraad > </p>
+        <p class="part--p1">op vooraad > </p>
       </a>
 
     </section>
@@ -417,7 +398,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
 
   <!--custom js link-->
-  <script src="/js/main.js"></script>
+  <script src="/js/main.js" defer></script>
 </body>
 
 
