--- a/productpage1.html
+++ b/productpage1.html
@@ -28,19 +28,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-    <div class="wrapper">
-      <div class="label">Submit your search</div>
-      <div class="searchBar">
-        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Search" value="" />
-        <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
-          <svg style="width:40px;height:30px" viewBox="9 2 20 24">
-            <path fill="#39b54a"
-              d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-          </svg>
-        </button>
-      </div>
-    </div>
-
+    
 
     <article class="cart">
       <a href="/dutch.html"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -56,14 +44,11 @@
   <ul class="navlist">
 
     <li><a href="/html/main.html">Home</a></li>
-    <li><a href="about-us.html">About-us</a></li>
-    <li><a href="#">Information</a></li>
-    <li><a href="productpage1.html">Products page</a></li>
-    <li><a href="developer.html">Developers</a></li>
-    <li><a href="contact.html">contact</a></li>
-    <li><a href="location.html">Location</a></li>
-    <li><a href="login.html">Log-in</a></li>
-
+    <li><a href="/about-us.html">Aboutus</a></li>
+    <li><a href="/info.html">Information</a></li>
+    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/developer.html">Developers</a></li>
+    
 
 
   </ul>
@@ -74,10 +59,6 @@
       <li class="norm li-1"><a href="about-us.html">About us</a></li>
       <li class="norm li-1"><a href="info.html">Information</a></li>
       <li class="norm li-1"><a href="productpage1.html">Prices</a></li>
-      <li class="norm li-1"><a href="#">Deals</a></li>
-      <li class="norm li-1"><a href="developer.html">Developers</a></li>
-      <li class="norm li-1"><a href="contact.html">contact</a></li>
-      <li class="norm li-1"><a href="login.html">Log-in</a></li>
       <li class="dropdown norm li-1" id="click-slide">
         <a href="#" class="dropdown-toggle" id="drop" data-toggle="dropdown" onclick="toggleSlider();" role="button"
           aria-expanded="false">Products &nbsp; &#9660;</a>
@@ -165,7 +146,7 @@
         <a href="dutch.html">
           <h2>Op vooraad > </h2>
         </a>
-        <a href="productpage2.html">
+        <a href="productspage.html">
           <h2>Details < </h2>
         </a>
         <li value="399,99" class="price-product">€399,99</li>
@@ -210,9 +191,6 @@
         <p>Munt 1 euro Nederland 2001 BEATRIX</p>
         <a href="dutch.html">
           <h2>Op vooraad > </h2>
-        </a>
-        <a href="productpage3.html">
-          <h2>Details < </h2>
         </a>
         <li value="249,99" class="price-product">€249,99</li>
         <section class="about">
@@ -294,6 +272,9 @@
         <p>Banknote China 10 Yen - Dragon - ND 1939</p>
         <a href="banknotes.html">
           <h2>Op vooraad > </h2>
+        </a>
+        <a href="productspage1.html">
+          <h2>Details < </h2>
         </a>
         <li value="2500" class="price-product">€2500</li>
         <section class="about">
