--- a/productspage.html
+++ b/productspage.html
@@ -44,7 +44,7 @@
 
 
     <article class="cart">
-      <a href="/productpage1.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="dutch.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </article>
 
 
@@ -119,8 +119,8 @@
       <!-- Product Description -->
       <article class="product-description">
         <span>Coins </span>
-        <h1> Dutch coins</h1>
-        <p>The older coins from the years!</p>
+        <h1> The older coins from the years!</h1>
+        <p>Nederlandse 2 euromunt Beatrix Koningin der Nederlanden 2001</p>
       </article>
       <p class="details--p">Details:</p>
       <p class="details--p1">De munt is geslagen in december vorig jaar, het jaar waarin Beatrix aftrad. Het gaat om een munt uit een beperkte oplage; er zijn er slechts 38 van geslagen tijdens een speciale bijeenkomst. Daarnaast is de 2-euromunt niet voorzien van een randschrift. Normaal gesproken staat de spreuk 'God zij met ons' op de munt.</p>
@@ -153,7 +153,7 @@
         <!-- Product Pricing -->
         <article class="product-price">
           <span>€399,99</span>
-          <a href="#" class="cart-btn">Add to cart</a>
+          <button class="cart-btn"><a href="#" class="cart-btn">Add to cart</a></button>
         </article>
     </section>
   </main>
