--- a/productspage1.html
+++ b/productspage1.html
@@ -44,7 +44,7 @@
 
 
     <article class="cart">
-      <a href="/productpage1.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="banknotes.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </article>
 
 
@@ -154,7 +154,7 @@
         <!-- Product Pricing -->
         <article class="product-price">
           <span>€2500</span>
-          <a href="#" class="cart-btn">Add to cart</a>
+          <button class="cart-btn"><a href="#" class="cart-btn">Add to cart</a></button>
         </article>
     </section>
   </main>
